New Account Design

--- a/src/pages/profile/profile.html
+++ b/src/pages/profile/profile.html
@@ -4,21 +4,26 @@
 	</div>
 	<div class="center mrg36Top">
 		<ion-row>
-			<ion-col (click)="goPage('account')" class="lineRight lineRight2 linerig" col-6 >
+			<ion-col (click)="goPage('account')" class="lineRight lineRight2 linerig" col-6>
 				<img class="tamaIcos" src="assets/newIcons/13.png" />
 				<h6 class="colWhite">{{'MI_CUENTA'|translate}}</h6>
 			</ion-col>
-			<ion-col (click)="goPage('security')" class="lineRight2" col-6 >
+			<ion-col (click)="goPage('security')" class="lineRight2" col-6>
 				<img class="tamaIcos" src="assets/newIcons/14.png" />
 				<h6 class="colWhite">{{'SEGURIDAD'|translate}}</h6>
 			</ion-col>
 		</ion-row>
-		<ion-row>
+		<ion-row class="mr10Top">
+			<ion-col (click)="goPage('HomePage')" col-12>
+				<img class="icoCenter" src="assets/newIcons/38.png" />
+			</ion-col>
+		</ion-row>
+		<ion-row class="margtop2">
 			<ion-col (click)="goPage('TransactionPage')" class="lineRight" col-6>
 				<img class="tamaIcos" src="assets/newIcons/15.png" />
 				<h6 class="colWhite">{{'TRANSACCION'|translate}}</h6>
 			</ion-col>
-			<ion-col (click)="goPage('history')" >
+			<ion-col (click)="goPage('history')">
 				<img class="tamaIcos" src="assets/newIcons/16.png" />
 				<h6 class="colWhite">Historial</h6>
 			</ion-col>
