--- a/src/pages/reg-number-phone/reg-number-phone.html
+++ b/src/pages/reg-number-phone/reg-number-phone.html
@@ -1,7 +1,9 @@
 <ion-content class="imgBackground vignette">
-  <div style="margin-top:12%" class="center">
-    <ion-img style="margin-bottom: 10%;" class="logo" src="assets/imgs/EPCLogo.png"></ion-img>
-    <div class="center"><ion-label> {{'MENSAJE_CODIGO_VERIFICACION1'|translate}}<br> {{'MENSAJE_CODIGO_VERIFICACION2'|translate}}
+  <div style="margin-top:20%" class="center">
+    <img style="margin-bottom: 15%" class="Lgo center" src="assets/imgs/EPCLogo.png">
+    <div class="center">
+      <ion-label class="whiteText"> {{'MENSAJE_CODIGO_VERIFICACION1'|translate}}<br>
+        {{'MENSAJE_CODIGO_VERIFICACION2'|translate}}
       </ion-label>
     </div>
   </div>
@@ -9,32 +11,36 @@
   <div class="center divMargin">
     <ion-grid class="center marGrid">
       <ion-row>
-        <ion-col col-5>
-          <ion-item class="item-flag item-md2 item-ios2">
-            <img [src]="user_register.flag" class="flagphone banderaWidt">
-            <button ion-button (click)="selectcountry()" class="transparente item-md2 item-button2 button-md ">+
+        <ion-col col-3 class="mar3Left">
+          <ion-item class="item-flag item-md2 item-ios2 mrgtop12">
+            <img [src]="user_register.flag" class="flagphone banderaWidt widflag">
+          </ion-item>
+        </ion-col>
+        <ion-col col-3 class="marlef3">
+          <ion-item class="item-flag item-md2 item-ios2 martop20">
+            <button ion-button (click)="selectcountry()" class="transparente item-md2 item-button2 button-md btnFlagCountry">+
               {{user_register.country_code}}
             </button>
           </ion-item>
         </ion-col>
-        <ion-col col-7>
+        <ion-col col-6 class="marleft8">
           <ion-item class="stylCel">
-            <ion-input required type="number" name="numerocelular" [(ngModel)]="user_register.value" placeholder="Número movil (celular)" [brmasker]="{len:12}"></ion-input>
+            <ion-input required type="number" name="numerocelular" [(ngModel)]="user_register.value" placeholder="Número movil (celular)"
+              [brmasker]="{len:12}"></ion-input>
           </ion-item>
         </ion-col>
       </ion-row>
     </ion-grid>
     <ion-item class="inputClass" *ngIf="response_verify.mail_code != null || response_verify.phone_code != null">
-      <ion-input placeholder="Introduce el código" maxlength="6" required style="text-align: center" type="number" [(ngModel)]="code_verify" [brmasker]="{len:6}"></ion-input>
+      <ion-input placeholder="Introduce el código" maxlength="6" required style="text-align: center" type="number"
+        [(ngModel)]="code_verify" [brmasker]="{len:6}"></ion-input>
     </ion-item>
   </div>
   <div class="center marginBts">
     <button class="buttonPayCash borderBtns" (click)="cancel()" ion-button small>{{'CANCELAR'|translate}}</button>
-    <button class="buttonPayCash borderBtns" (click)="sendNumberPhone()" ion-button small
-            *ngIf="response_verify.phone_code == null">{{'CONFIRMAR_CELULAR'|translate}}
+    <button class="buttonPayCash borderBtns" (click)="sendNumberPhone()" ion-button small *ngIf="response_verify.phone_code == null">{{'CONFIRMAR_CELULAR'|translate}}
     </button>
-    <button class="buttonPayCash borderBtns" (click)="verifyCode()" ion-button small
-            *ngIf="response_verify.phone_code != null">{{'CONTINUAR'|translate}}
+    <button class="buttonPayCash borderBtns" (click)="verifyCode()" ion-button small *ngIf="response_verify.phone_code != null">{{'CONTINUAR'|translate}}
     </button>
   </div>
 
