Fixed Account Photo

--- a/src/pages/account/account.html
+++ b/src/pages/account/account.html
@@ -3,7 +3,7 @@
     <div style="background: transparent">
       <img (click)="cerrarSesion()"  class="icoClose" icon-end src="assets/newIcons/17.png">
     </div>
-    <ion-row>
+    <ion-row class="mrgPhoto">
       <ion-col>
         <img class="styleLogo " src="{{usuario?.url_img}}" (click)="foto()">
       </ion-col>
