--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -1,6 +1,6 @@
 <ion-content class="imgBackground vignette">
   <div class="center">
-    <ion-img class="logo" src="assets/imgs/EPCLogo.png"></ion-img>
+    <img class="logo" src="assets/imgs/EPCLogo.png">
   </div>
   <!--<form #formulario >-->
   <form [formGroup]="formGroup" (ngSubmit)="login()">
