--- a/src/pages/recovery-password/recovery-password.html
+++ b/src/pages/recovery-password/recovery-password.html
@@ -1,14 +1,13 @@
-<ion-content padding class="back vignette">
-	<div style="margin-top:12%" class="center">
-		<ion-img class="logo" src="assets/imgs/EPCLogo.png"></ion-img>
+<ion-content padding class="imgBackground vignette">
+	<div style="margin-top:12%" class="center marbutt">
+		<img class="logo" src="assets/imgs/EPCLogo.png">
 	</div>
-
-	<div *ngIf="isvisible">
-		<ion-item>
+	<div *ngIf="isvisible" class="center">
+		<ion-item class="backTransparent ">
 			<ion-label stacked>{{'INGRESE_CELULAR'|translate}}</ion-label>
 			<ion-input type="text" [(ngModel)]="data" name="userdata"></ion-input>
 		</ion-item>
-		<ion-item *ngIf="iscodigo2">
+		<ion-item class="backTransparent" *ngIf="iscodigo2">
 			<ion-label stacked>{{'INGRESE_CODIGO_VERIFICACION'|translate}}</ion-label>
 			<ion-input type="text" [(ngModel)]="codigo" name="usercodigo"></ion-input>
 		</ion-item>
@@ -17,7 +16,7 @@
 				<button ion-button (click)="sendMessage('phone')" block class="buttonPayCash">{{'ENVIAR_MENSAJE'|translate}}</button>
 			</ion-col>
 			<ion-col col-12 *ngIf="iscodigo2">
-				<button ion-button (click)="confirmCode()" block class="buttonPayCash">{{'CONFIRMAR_CODIGO'|translate}}Confirmar código</button>
+				<button ion-button (click)="confirmCode()" block class="buttonPayCash">{{'CONFIRMAR_CODIGO'|translate}}</button>
 			</ion-col>
 		</ion-row>
 		<ion-row class="marginLft divMargin20">
@@ -25,21 +24,20 @@
 				<button ion-button (click)="cancelar()" class="buttonPayCash">{{'CANCELAR'|translate}}</button>
 			</ion-col>
 			<ion-col col-6 *ngIf="!iscodigo2">
-				<button ion-button (click)="changeVisible()" class="buttonPayCash">{{'RECUPERAR_X_EMAIL'|translate}}</button>
+				<button ion-button (click)="changeVisible()" class="buttonPayCash wi132Tam">{{'RECUPERAR_X_EMAIL'|translate}}</button>
 			</ion-col>
 		</ion-row>
 	</div>
-
 	<div *ngIf="!isvisible">
-			<div [formGroup]="formGroup">
-		<ion-item>
-			<ion-label stacked>{{'INGRESE_EMAIL'|translate}}</ion-label>
-			<ion-input type="text"  name="dataname" required formControlName="data"></ion-input>		
-		</ion-item>
-		<ion-item no-lines *ngIf="formGroup.invalid">
+		<div [formGroup]="formGroup">
+			<ion-item class="backTransparent colWhite" no-lines *ngIf="formGroup.invalid">
 				<msg-error [control]="formGroup.controls.data"></msg-error>
-		</ion-item>
-	</div>
+			</ion-item>
+			<ion-item class="backTransparent">
+				<ion-label stacked>{{'INGRESE_EMAIL'|translate}}</ion-label>
+				<ion-input type="text" name="dataname" required formControlName="data"></ion-input>
+			</ion-item>
+		</div>
 		<ion-item *ngIf="iscodigo">
 			<ion-label stacked>{{'INGRESE_CODIGO_VERIFICACION'|translate}}</ion-label>
 			<ion-input type="text" [(ngModel)]="codigo" name="usercodigo"></ion-input>
@@ -57,7 +55,7 @@
 				<button ion-button (click)="cancelar()" class="buttonPayCash">{{'CANCELAR'|translate}}</button>
 			</ion-col>
 			<ion-col col-6>
-				<button ion-button (click)="changeVisible()" class="buttonPayCash">{{'RECUPERAR_X_SMS'|translate}}</button>
+				<button ion-button (click)="changeVisible()" class="buttonPayCash wi132Tam">{{'RECUPERAR_X_SMS'|translate}}</button>
 			</ion-col>
 		</ion-row>
 	</div>
