Home and provider voice

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -37,8 +37,8 @@
       </ion-col>
       <ion-col class="center mar1Left" col-2 (click)="goPage('history')">
         <!-- <ion-badge item-end>{{count}}</ion-badge> -->
-        <img width="40" height="40" src="assets/icon/2.png">
-        <p>{{'HISTORIAL'|translate}}</p>
+        <img width="40" height="40" src="assets/newIcons/12.png">
+        <p>{{'INICIO'|translate}}</p>
       </ion-col>
       <ion-col class="center" col-2 (click)="goPage('maps')">
         <img width="40" height="40" src="assets/icon/3.png">
